5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1675_1951.log
== TEST (2019-04-29 20:40:49) 
-- CODE:
p1= int(input("insira o x0: "))
p2= int(input("insira o y0: "))
p3= int(input("insira o x1: "))
p4= int(input("insira o y1: "))
p5= int(input("insira o x2: "))
p6= int(input("insira o y2: "))
c=(p3-p1)*(p6-p2)-(p5-p1)*(p4-p2)
if c<0:
	print("A direita da reta")
elif c>0:
	print("A esquerda da reta")
elif c=0:
	print("Sobre a reta")
-- ERROR:
File "XXXX", line 12
    elif c=0:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:41:00) 
-- CODE:
p1= int(input("insira o x0: "))
p2= int(input("insira o y0: "))
p3= int(input("insira o x1: "))
p4= int(input("insira o y1: "))
p5= int(input("insira o x2: "))
p6= int(input("insira o y2: "))
c=(p3-p1)*(p6-p2)-(p5-p1)*(p4-p2)
if c<0:
	print("A direita da reta")
elif c>0:
	print("A esquerda da reta")
elif c==0:
	print("Sobre a reta")
-- OUTPUT:
A esquerda da reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 20:41:11) 
-- CODE:
p1= int(input("insira o x0: "))
p2= int(input("insira o y0: "))
p3= int(input("insira o x1: "))
p4= int(input("insira o y1: "))
p5= int(input("insira o x2: "))
p6= int(input("insira o y2: "))
c=(p3-p1)*(p6-p2)-(p5-p1)*(p4-p2)
if c<0:
	print("A direita da reta")
elif c>0:
	print("A esquerda da reta")
elif c==0:
	print("Sobre a reta")
-- EXECUTION TIME:
0.307602
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
A esquerda da reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
Sobre a reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
A direita da reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
